--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "profile": {
       "name": "A-00",
       "title": "個人開発者",
-      "description": "配信支援ツールを開発しています"
+      "description": "色んな事をしているおじさんです。"
     },
     "message": "🎉 ログ安価システムをご利用いただきありがとうございます 🎉
 
