--- a/config.json
+++ b/config.json
@@ -8,16 +8,7 @@
       "title": "個人開発者",
       "description": "色んな事をしているおじさんです。"
     },
-    "message": "🎉 ログ安価システムをご利用いただきありがとうございます 🎉
-
-■本プラグインについて
-開発者が趣味で開発した安価機能とハードなコメントログ管理機能が実装されています。
-他の配信者の皆様にも安価に触れていただきたく、頒布・販売することにしました。
-
-■もしプラグインが役に立ちましたら
-ぜひ各種SNSでのフォローや支援をお願いします。
-    ※1 配信で使用される際にご連絡いただければ観に行かせていただけるかもしれません。
-    ※2 配信内や概要欄等で宣伝していただけるととてもありがたいです！",
+    "message": "LogAnkerSystemをご利用いただきありがとうございます。ご要望・不具合報告はお気軽にどうぞ。",
     "links": [
       {
         "icon": "🏪",
