クォーテ漏れ漏れ対応

--- a/config.json
+++ b/config.json
@@ -29,19 +29,19 @@
             "url": "https://x.com/_a_00__"
         },
         {
-            "icon:" "🦋",
+            "icon": "🦋",
             "label": "bluesky",
             "description": "同上",
-            "url:" "https://bsky.app/profile/a-00.bsky.social"
+            "url": "https://bsky.app/profile/a-00.bsky.social"
         },
         {
-            "icon:" "📺",
+            "icon": "📺",
             "label": "YouTube",
             "description": "主にゲーム、たまにツール開発などしてます",
-            "url:" "https://youtube.com/channel/UCYDSE-5L3i52SyJgG9L3q1w?si=ZXV4mo7-c3AXDUyM"
+            "url": "https://youtube.com/channel/UCYDSE-5L3i52SyJgG9L3q1w?si=ZXV4mo7-c3AXDUyM"
         },
         {
-            "icon:" "📺",
+            "icon": "📺",
             "label": "Twitch",
             "description": "Youtubeと同時配信してます",
             "url": "https://www.twitch.tv/a_00__"
