--- a/config.json
+++ b/config.json
@@ -85,12 +85,26 @@
   },
 
   "releaseNotification": {
-    "//": "↓をキーに新規通知",
+    "/id/": "↓をキーに新規通知",
     "id": "test-notification-000",
     "enabled": true,
+    "/type/": "update / newProduct / important から選択することでUI色などを調整",
     "type": "update",
-    "title": "🎉 v2.0.0 リリース",
-    "message": "新機能が追加されました。\n\n・外部設定対応\n・モーダルUI改善",
+    "title": "v2.0.0 リリース",
+    "message": [
+        {
+            "heading": "新機能",
+            "content": "外部設定に対応しました。\nモーダルUIを改善しました。"
+        },
+        {
+            "heading": "バグ修正",
+            "content": "一部の環境で起動しない問題を修正しました。"
+        },
+        {
+            "heading": "お知らせ",
+            "content": "次回アップデートでは新しいフィルター機能を追加予定です。"
+        }
+    ],
     "linkText": "詳細を見る",
     "linkUrl": "https://example.com/changelog"
    }
