【製品版（v2.0.0）】正式な通知文を作成

--- a/config.json
+++ b/config.json
@@ -79,7 +79,7 @@
       {
         "icon": "🎁",
         "title": "その他の特典",
-        "items": ["買い切りなので追加料金不要", "広告バナーなし", "今後のアップデートを無償提供予定"]
+        "items": ["買い切りなので追加料金不要", "今後のアップデートを無償提供予定（boothで商品を都度差し替え更新していく予定）"]
       }
     ]
   },
@@ -105,7 +105,7 @@
             "content": "お使いのPCに合わせたパフォーマンスを選択できるようになりました。\n　　・ブラウザキャッシュ機能実装。\n　　・メモリ負荷を調整できるパフォーマンス機能実装。\n　　・サーバー切断時の再接続UIなど復帰処理を実装。"
         }
     ],
-    "linkText": "詳細を見る",
-    "linkUrl": "https://example.com/changelog"
+    "/linkText": "先頭スラッシュで強引に実質的コメントアウトにしてます",
+    "/linkUrl": "https://a-00.booth.pm/items/7792479"
    }
 }
