【製品版（v2.0.0）】リリース通知のバージョンID修正

--- a/config.json
+++ b/config.json
@@ -86,7 +86,7 @@
 
   "releaseNotification": {
     "/id/": "↓をキーに新規通知",
-    "id": "test-notification-000",
+    "id": "Notification-001",
     "enabled": true,
     "/type/": "🔄update / 🆕newProduct / ⚠️important / 📢alert / default から選択することでUI色などを調整",
     "type": "newProduct",
