--- a/config.json
+++ b/config.json
@@ -102,7 +102,7 @@
         {
             "type": "newProduct",
             "heading": "パフォーマンス調整機能を新規実装",
-            "content": "お使いのPCに合わせたパフォーマンスを選択できるようになりました。\n　　・ブラウザキャッシュ機能実装。\n　　・メモリ負荷を調整できるパフォーマンス機能実装。\n　　・サーバー切断時の再接続UIなど復帰処理を実装。"
+            "content": "お使いのPCに合わせたパフォーマンスを選択できるようになりました。\n　　・ブラウザキャッシュ機能実装。\n　　・メモリ負荷を調整できるパフォーマンス機能実装。"
         }
     ],
     "/linkText": "先頭スラッシュで強引に実質的コメントアウトにしてます",
