--- a/config.json
+++ b/config.json
@@ -89,7 +89,7 @@
     "id": "Notification-002",
     "enabled": true,
     "/type/": "🔄update / 🆕newProduct / ⚠️important / 📢alert / default から選択することでUI色などを調整",
-    "type": "newProduct",
+    "type": "update",
     "title": "v2.0.1 リリース",
 
      "/message/": "type = ↑ のtypeを流用し、項目ごとの着色を行う / heading = 見出し / content = 本文、　改行コード \n ",
