--- a/config.json
+++ b/config.json
@@ -11,6 +11,12 @@
     "message": "🎉 ログ安価システムをご利用いただきありがとうございます 🎉 \n \n ■本プラグインについて \n 開発者が趣味で開発した安価機能とハードなコメントログ管理機能が実装されています。 \n 他の配信者の皆様にも安価に触れていただきたく、頒布・販売することにしました。 \n \n ■もしプラグインが役に立ちましたら \n ぜひ各種SNSでのフォローや支援をお願いします。 \n 　※1 配信で使用される際にご連絡いただければ観に行かせていただけるかもしれません。 \n 　※2 配信内や概要欄等で宣伝していただけるととてもありがたいです！",
     "links": [
       {
+          "icon": "🖊",
+          "label": "開発者HP",
+          "description": "開発者の色々が乗ってるサイト",
+          "url": "https://a-00-manufacturer.github.io/developer-info/"
+      }, 
+      {
           "icon": "🐫",
           "label": "BOOTH",
           "description": "開発したものを公開する場所",
